# facet-minecraft

./: .deny.toml  .gitignore  .justfile  .typos.toml  Cargo.toml  README.doc.md  README.md  README.md.doc  deny.toml  rust-toolchain.toml
.github/: renovate.json
benches/: deserialize.rs  serialize.rs
crates/facet-bedrock/: Cargo.toml  README.md
crates/facet-bedrock/src/: lib.rs
crates/facet-bedrock/src/deserialize/: error.rs  mod.rs  trait.rs
crates/facet-bedrock/src/serialize/: error.rs  mod.rs
crates/facet-brigadier/: Cargo.toml
crates/facet-brigadier/src/: lib.rs
crates/facet-minecraft/: Cargo.toml  README.md
crates/facet-minecraft/benches/: serialize.rs
crates/facet-minecraft/examples/: ping.rs  server_status.rs  test.rs  zerocopy.rs
crates/facet-minecraft/src/: assert.rs  common.rs  custom.rs  iterator.rs  lib.rs  report.rs
crates/facet-minecraft/src/adapter/: json.rs  mod.rs  write_cursor.rs
crates/facet-minecraft/src/deserialize/: error.rs  mod.rs  trait.rs  traits.rs
crates/facet-minecraft/src/deserialize/jit/: mod.rs
crates/facet-minecraft/src/deserialize/parts/: mod.rs  sequence.rs  user.rs
crates/facet-minecraft/src/serialize/: error.rs  mod.rs  trait.rs  traits.rs
crates/facet-minecraft/tests/: deserialize.rs  deserialize_error.rs  serialize.rs
crates/facet-minecraft/tests/integer/: var_u128.rs  var_u16.rs  var_u32.rs  var_u64.rs
crates/facet-minehash/: Cargo.toml  README.md
crates/facet-minehash/src/: assert.rs  hash.rs  lib.rs
crates/facet-minetext/: Cargo.toml
crates/facet-minetext/examples/: colorize.rs  print.rs  terminal.rs
crates/facet-minetext/src/: color.rs  display.rs  lib.rs  nbt.rs  style.rs
crates/facet-minetext/src/color/: custom.rs  mod.rs  preset.rs
crates/facet-minetext/src/json/: content.rs  mod.rs
crates/facet-minetext/src/text/: content.rs  display.rs  mod.rs
crates/facet-nbt/: Cargo.toml  README.md
crates/facet-nbt/benches/: complex_player.rs  hypixel.rs
crates/facet-nbt/src/: borrowed.rs  lib.rs  mutf8.rs  test.rs
crates/facet-nbt/src/borrowed/: compound.rs  mod.rs  tag.rs
crates/facet-nbt/src/deserialize/: error.rs
crates/facet-nbt/src/format/: mod.rs
crates/facet-nbt/src/format/borrowed/: compound.rs  mod.rs  tag.rs
crates/facet-nbt/src/format/owned/: compound.rs  mod.rs  tag.rs
crates/facet-nbt/src/format/raw/: compound.rs  error.rs  mod.rs  tag.rs  test.rs
crates/facet-nbt/src/map/: cow.rs  error.rs  facet.rs  item.rs  map.rs  mod.rs  tape.rs
crates/facet-nbt/src/owned/: compound.rs  mod.rs  tag.rs
crates/facet-nbt/src/serialize/: error.rs  mod.rs
crates/facet-nbt/src/tape/: error.rs  facet.rs  item.rs  mod.rs  tape.rs
crates/facet-nbt/tests/: deserialize.rs  deserialize_facet.rs  serialize.rs  serialize_facet.rs
crates/facet-snbt/: Cargo.toml  README.md
crates/facet-snbt/src/: error.rs  lib.rs  serialize.rs  snbt.rs  test.rs
crates/facet-snbt/src/deserialize/: error.rs  mod.rs
crates/facet-snbt/src/format/: legacy.rs  mod.rs  modern.rs
crates/facet-snbt/src/serialize/: error.rs  mod.rs  serializer.rs  writer.rs
examples/: custom.rs  deserialize.rs  error_message.rs  serialize.rs  server_status.rs  zerocopy.rs
facet-bedrock/: Cargo.toml  README.md
facet-bedrock/src/: lib.rs
facet-bedrock/src/deserialize/: mod.rs
facet-bedrock/src/serialize/: mod.rs  trait.rs
facet-minecraft/: Cargo.toml  README.md
facet-minecraft/src/: attribute.rs  common.rs  hint.rs  lib.rs  result.rs
facet-minecraft/src/deserialize/: error.rs  fns.rs  iter.rs  mod.rs  parse.rs  stack.rs  stream.rs
facet-minecraft/src/deserialize/jit/: mod.rs
facet-minecraft/src/serialize/: buffer.rs  error.rs  fns.rs  iter.rs  mod.rs
facet-minecraft/tests/: deserialize_alloc.rs  deserialize_core.rs  deserialize_iter.rs  deserialize_reader.rs  deserialize_stream.rs  iter_deserialize.rs  iter_serialize.rs  reader_deserialize.rs  serialize_iter.rs  size_hint.rs  structure.rs  writer_serialize.rs
src/: adapter.rs  assert.rs  custom.rs  deserialize.rs  lib.rs  serialize.rs
src/adapter/: mod.rs
src/deserialize/: error.rs  mod.rs  traits.rs
src/deserialize/parts/: json.rs  map.rs  mod.rs  option.rs  pointer.rs  primitive.rs  sequence.rs  user.rs
src/serialize/: error.rs  mod.rs  traits.rs
tests/: var_u128.rs  var_u16.rs  var_u32.rs  var_u64.rs
