[workspace]
members = ["crates/facet-minecraft", "crates/facet-nbt"]
resolver = "2"

[workspace.package]
authors = ["EightFactorial"]
edition = "2024"
homepage = "https://github.com/EightFactorial/facet-minecraft"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EightFactorial/facet-minecraft"
rust-version = "1.88.0"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
private_intra_doc_links = "deny"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
clone_on_ref_ptr = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "warn", priority = -1 }
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
unnecessary_cast = "warn"

[workspace.dependencies]
# Facet dependencies
facet-core = { default-features = false, features = ["alloc"], version = "0.28" }
facet-deserialize = { default-features = false, features = ["alloc"], version = "0.28" }
facet-json = { default-features = false, version = "0.28" }
facet-macros = { default-features = false, version = "0.28" }
facet-reflect = { default-features = false, features = ["alloc"], version = "0.28" }

# Other dependencies
ariadne = { default-features = false, version = "0.5" }
inventory = { version = "0.3" }
once_cell = { default-features = false, features = ["alloc"], version = "1.21" }
owo-colors = { features = ["alloc"], version = "4.2" }
parking_lot = { default-features = false, version = "0.12" }

# Benchmark dependencies
divan = "0.1"
