[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["EightFactorial"]
edition = "2024"
homepage = "https://github.com/EightFactorial/facet-minecraft"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EightFactorial/facet-minecraft"
rust-version = "1.88.0"
version = "0.1.0"

[workspace.lints.rust]
unexpected_cfgs = "allow"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
private_intra_doc_links = "deny"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
clone_on_ref_ptr = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "warn", priority = -1 }
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
unnecessary_cast = "warn"

[workspace.dependencies]
# Workspace crates
facet-minecraft = { default-features = false, path = "crates/facet-minecraft", version = "0.1" }
facet-minehash = { default-features = false, path = "crates/facet-minehash", version = "0.1" }
facet-minetext = { default-features = false, path = "crates/facet-minetext", version = "0.1" }
facet-nbt = { default-features = false, path = "crates/facet-nbt", version = "0.1" }
facet-snbt = { default-features = false, path = "crates/facet-snbt", version = "0.1" }

# Facet dependencies
facet = { default-features = false, version = "0.28" }
facet-core = { default-features = false, version = "0.28" }
facet-deserialize = { default-features = false, version = "0.28" }
facet-json = { default-features = false, version = "0.28" }
facet-macros = { default-features = false, version = "0.28" }
facet-reflect = { default-features = false, version = "0.28" }
facet-serialize = { default-features = false, version = "0.28" }

# Other dependencies
ariadne = { default-features = false, version = "0.5" }
const-str = { default-features = false, version = "0.6" }
const_panic = { default-features = false, version = "0.2" }
crc32c = { default-features = false, version = "0.6" }
fxhash = { default-features = false, version = "0.2" }
indexmap = { default-features = false, version = "2.10" }
inventory = { default-features = false, version = "0.3" }
itoa = { default-features = false, version = "1.0" }
once_cell = { default-features = false, version = "1.21" }
owo-colors = { default-features = false, version = "4.2" }
parking_lot = { default-features = false, version = "0.12" }
pretty_assertions = { default-features = false, version = "1.4" }
regex-lite = { default-features = false, version = "0.1" }
ryu = { default-features = false, version = "1.0" }
simd_cesu8 = { default-features = false, version = "1.0" }

# Benchmark dependencies
divan = "0.1"
