[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "facet-bedrock"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }

[dependencies]
facet = { features = ["alloc", "uuid"],  workspace = true }
facet-format = { workspace = true }
facet-reflect = { workspace = true }
miette = { workspace = true }
uuid = { workspace = true }

# Optional dependencies
corosensei = { features = ["default-stack", "unwind"], workspace = true, optional = true }
facet-pretty = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }
tokio = { features = ["io-util"], workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std", "streaming"]

# Enable streaming support
streaming = ["dep:corosensei", "std"]
# Enable futures-lite support
futures-lite = ["dep:futures-lite", "streaming"]
# Enable tokio support
tokio = ["dep:tokio", "streaming"]

# Enable JIT compilation support
jit = ["facet-format/jit", "std"]

# Enable tracing messages
tracing = ["dep:facet-pretty", "dep:tracing"]

# Enable support for the standard library
std = ["facet/std", "futures-lite?/std", "tracing?/std", "uuid/std"]
# Enable features using the nightly toolchain
nightly = ["corosensei?/asm-unwind"]
