[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "facet-minecraft"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Tests ---

[[test]]
name = "deserialize_reader"
required-features = ["std"]

# --- Dependencies ---

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }

[dependencies]
facet = { features = ["alloc", "reflect", "uuid"],  workspace = true }
facet-error = { workspace = true }
facet-reflect = { features = ["alloc"], workspace = true }
miette = { workspace = true }
smallvec = { features = ["const_generics", "const_new", "union"], workspace = true }
uuid = { workspace = true }

# Optional dependencies
futures-lite = { workspace = true, optional = true }
tokio = { features = ["io-util", "rt"], workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable futures-lite support
futures-lite = ["dep:futures-lite", "std"]
# Enable tokio support
tokio = ["dep:tokio", "std"]

# Enable tracing messages
tracing = ["dep:tracing"]

# Enable support for the standard library
std = ["facet/std", "futures-lite?/std", "tracing?/std", "smallvec/write", "uuid/std"]
# Enable features using the nightly toolchain
nightly = ["smallvec/specialization"]
