[package]
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "facet-brigadier"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
divan = { workspace = true }

[dependencies]
facet-core = { workspace = true }
facet-deserialize = { workspace = true }
facet-macros = { workspace = true }
facet-reflect = { workspace = true }
facet-serialize = { workspace = true }

[features]
default = ["std"]

# Enable support for the standard library
std = ["facet-deserialize/std", "facet-reflect/std", "facet-serialize/std"]
# Enable features using the nightly toolchain
nightly = []
