[package]
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "facet-minetext"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
divan = { workspace = true }
pretty_assertions = { features = ["alloc"], workspace = true }

[dependencies]
const-str = { workspace = true }
const_panic = { features = ["rust_1_88"], workspace = true }
facet = { features = ["alloc"], workspace = true }
facet-deserialize = { workspace = true }
facet-nbt = { features = ["alloc", "facet"], workspace = true }
facet-serialize = { workspace = true }
facet-snbt = { features = ["alloc"], workspace = true }
owo-colors = { features = ["alloc"], workspace = true }

# Optional dependencies
ariadne = { optional = true, workspace = true }
facet-json = { optional = true, workspace = true }

[features]
default = ["json", "std"]

# Enable reading SNBT-based text,
# used in versions 1.21.4 and earlier
json = ["dep:facet-json"]

# Enable rich diagnostics
rich-diagnostics = [
  "dep:ariadne",
  "facet-deserialize/rich-diagnostics",
  "facet-json?/rich-diagnostics",
  "facet-snbt/rich-diagnostics",
  "std",
]

# Enable support for the standard library
std = ["facet-deserialize/std", "facet-serialize/std", "facet-snbt/std", "pretty_assertions/std"]
# Enable features using the nightly toolchain
nightly = []

[[example]]
name = "colorize"
required-features = ["std"]

[[example]]
name = "terminal"
required-features = ["std"]
