[package]
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "facet-nbt"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
divan = { workspace = true }

[dependencies]
facet-core = { features = ["alloc"], workspace = true }
facet-macros = { workspace = true }
facet-reflect = { features = ["alloc"], workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true }
simd_cesu8 = { workspace = true }

# Optional dependencies
ariadne = { optional = true, workspace = true }
owo-colors = { features = ["alloc"], optional = true, workspace = true }

[features]
default = ["std"]

# Enable rich diagnostics
rich-diagnostics = ["dep:ariadne", "dep:owo-colors", "std"]

# Enable support for the `uuid` crate
uuid = ["facet-core/uuid", "facet-reflect/uuid"]
# Enable support for the standard library
std = ["indexmap/std", "simd_cesu8/std"]
# Enable features using the nightly toolchain
nightly = ["simd_cesu8/nightly"]
