[package]
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "facet-nbt"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Benchmarks & Tests ---

[dev-dependencies]
divan = { workspace = true }
facet-macros = { workspace = true }
flate2 = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "complex_player"
path = "benches/complex_player.rs"
required-features = ["facet-minecraft"]
harness = false

[[bench]]
name = "hypixel"
path = "benches/hypixel.rs"
required-features = ["facet-minecraft"]
harness = false

[[test]]
name = "deserialize"
path = "tests/deserialize.rs"
required-features = ["rich-diagnostics", "trace"]

[[test]]
name = "deserialize_facet"
path = "tests/deserialize_facet.rs"
required-features = ["facet-minecraft", "rich-diagnostics"]

[[test]]
name = "serialize"
path = "tests/serialize.rs"
required-features = ["rich-diagnostics", "trace"]

[[test]]
name = "serialize_facet"
path = "tests/serialize_facet.rs"
required-features = ["facet-minecraft", "rich-diagnostics"]

# --- Dependencies ---

[dependencies]
facet-core = { workspace = true }
facet-reflect = { workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true }
simd_cesu8 = { workspace = true }
simdutf8 = { workspace = true }
zerocopy = { features = ["alloc"], workspace = true }

# Optional dependencies
ariadne = { workspace = true, optional = true }
facet-minecraft = { features = ["custom"], workspace = true, optional = true }
foldhash = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable rich error messages.
rich-diagnostics = ["dep:ariadne", "facet-minecraft?/rich-diagnostics", "std"]
# Enable tracing support.
trace = ["dep:tracing", "facet-minecraft?/trace"]

# Enable `facet-minecraft` support.
facet-minecraft = ["dep:facet-minecraft"]
# Enable `foldhash` support.
foldhash = ["dep:foldhash"]

# Enable support for the standard library
std = ["facet-core/std", "facet-reflect/std", "facet-minecraft?/std", "foldhash?/std", "indexmap/std", "tracing?/std", "simd_cesu8/std", "simdutf8/std", "zerocopy/std"]
# Enable features using the nightly toolchain
nightly = ["facet-minecraft?/nightly", "foldhash?/nightly", "simd_cesu8/nightly", "simdutf8/aarch64_neon"]
